# roq

./: .gitignore  .lia.cache  .nia.cache  Cargo.toml  Makefile
.github/workflows/: ci.yml
.shiba/: pre-commit
examples/: hello.rs  manual_double.v
roq/: Cargo.toml
roq/src/: ast.rs  ast_display.rs  coqtop.rs  lib.rs
roq_core/: Cargo.toml
roq_core/src/: ast.rs  ast_display.rs  lib.rs
roq_derive/: Cargo.toml
roq_derive/src/: block.rs  expr.rs  func.rs  lib.rs  ty.rs
src/: coqtop.rs  lib.rs
tests/: control_flow.rs  hello.rs
