[package]
name = "roq"
description = "Proc-macro Coq code generation and proof automation"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.12"
serde = { version = "1.0.197", features = ["derive"] }
tempfile = "3.10.1"

